<resources>
    <string name="app_name">Ejercicios guia</string>
    <!--MENU DE OPCIONES -->
    <string name="pantalla1">Capturar el clic de un boton</string>
    <string name="pantalla2">Controles RadioGrup y RadioButton</string>
    <string name="pantalla3">Control Checkbox</string>
    <string name="pantalla4">Control Spinner</string>
    <string name="pantalla5">Control ListView</string>
    <string name="pantalla6">Control Imagen Button</string>
    <string name="pantalla7">Notificaciones</string>
    <string name="pantalla8">Control EdithText</string>
    <string name="pantalla9">Segundo Activity</string>
    <string name="pantalla10">Actividad con parametros</string>


    <string name="ejercicio1">Ejercicio 1</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Inicio</string>
    <string name="second_fragment_label">Segunda pantalla</string>


    <string name="next">Ver la siguiente pantalla</string>
    <string name="previous">Regresar a la pantalla principal</string>
    <string name="inicio">Inicio</string>


    <string name="hello_first_fragment">¡Bienvenido! </string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
</resources>